objects/EUR_CRM_Sales_Order__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>Customer_Tax_Number__c</fullName>
        <description>Customer Tax Number is made of 2 letters and 9 digits, 11 symbols in total
(https://basecamp.com/2036369/projects/10425694/todos/247836185)</description>
        <label>Customer Tax Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_AccountType__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipName>Sales_Orders_Account_Account_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Account_Phone__c</fullName>
        <formula>EUR_CRM_Account__r.EUR_CRM_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Account_VAT_Number__c</fullName>
        <formula>EUR_CRM_Account__r.EUR_CRM_VAT_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer VAT Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Account__c</fullName>
        <label>Account</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>Sales Orders (EU) (Account)</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>EUR_CRM_Address__c</fullName>
        <formula>EUR_CRM_BillingCity__c+&apos;,&apos;+EUR_CRM_Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Amount_total__c</fullName>
        <label>Amount total</label>
        <summarizedField>EUR_CRM_Sales_Order_Items__c.EUR_CRM_Totallineamount__c</summarizedField>
        <summaryForeignKey>EUR_CRM_Sales_Order_Items__c.EUR_CRM_Sales_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Amount_with_VAT__c</fullName>
        <formula>EUR_CRM_TotalAmount__c * 1.2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount with VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_AnimationSum__c</fullName>
        <label>Promotion Sum</label>
        <summarizedField>EUR_CRM_Sales_Order_Items__c.EUR_CRM_Totallineamount__c</summarizedField>
        <summaryForeignKey>EUR_CRM_Sales_Order_Items__c.EUR_CRM_Sales_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_BillTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BillTo</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>Sales Orders (EU) (BillTo)</relationshipLabel>
        <relationshipName>Sales_Orders_EU1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_BillingBlockReason__c</fullName>
        <label>BillingBlockReason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_BillingCity__c</fullName>
        <formula>EUR_CRM_Account__r.EUR_CRM_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_BillingStatus__c</fullName>
        <label>BillingStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Boxtrackingnumber__c</fullName>
        <label>Box tracking number</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand__c</fullName>
        <label>Brand</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CH</fullName>
                    <label>Consumer Health</label>
                </value>
                <value>
                    <fullName>AH</fullName>
                    <label>Animal Health</label>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_CISLink_Distributor__c</fullName>
        <formula>HYPERLINK( EUR_CRM_CIS_Link__r.EUR_CRM_Distributor_Account__r.Id , EUR_CRM_CIS_Link__r.EUR_CRM_Distributor_Account__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CISLink Distributor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_CIS_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CISLink (EU)</label>
        <referenceTo>EUR_CRM_CISLink__c</referenceTo>
        <relationshipLabel>Sales Orders (EU) (CIS Link)</relationshipLabel>
        <relationshipName>Sales_Orders_CIS_Link</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Sales Orders (EU)</relationshipLabel>
        <relationshipName>Sales_Orders_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Channel__c</fullName>
        <formula>TEXT(EUR_CRM_Account__r.EUR_CRM_Channel__c)</formula>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_City__c</fullName>
        <formula>EUR_CRM_Account__r.EUR_CRM_City__c</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Code_in_Wholesaler_ERP__c</fullName>
        <label>Code in Wholesaler ERP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Collection_Point__c</fullName>
        <label>Collection Point</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bloemfontein</fullName>
                </value>
                <value>
                    <fullName>Cape Town</fullName>
                </value>
                <value>
                    <fullName>Eastern Cape</fullName>
                </value>
                <value>
                    <fullName>Gauteng</fullName>
                </value>
                <value>
                    <fullName>KZN</fullName>
                </value>
                <value>
                    <fullName>Limpopo</fullName>
                </value>
                <value>
                    <fullName>Namibia</fullName>
                </value>
                <value>
                    <fullName>Nelspruit</fullName>
                </value>
                <value>
                    <fullName>North West</fullName>
                </value>
                <value>
                    <fullName>Port Elizabeth</fullName>
                </value>
                <value>
                    <fullName>Southern Cape</fullName>
                </value>
                <value>
                    <fullName>Transkei</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_CompactName__c</fullName>
        <formula>TEXT(EUR_CRM_Date__c)+&apos; &apos;+RecordType.Name+&apos; &apos;+TEXT(EUR_CRM_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contact_Mobile_Phone__c</fullName>
        <formula>EUR_CRM_Contact_Person__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contact_Name__c</fullName>
        <formula>EUR_CRM_Contact_Person__r.FirstName+&apos; &apos;+EUR_CRM_Contact_Person__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contact_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sales Orders (EU) (Contact)</relationshipLabel>
        <relationshipName>Sales_Orders_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Related__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a new field created for PR BG.</description>
        <label>Contract Related</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Related_formula__c</fullName>
        <formula>if(EUR_CRM_Contract_Related__c=true,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Related</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Cost_Center_Code__c</fullName>
        <description>This is a newly created field for BG. 
Depending on the Cost Center, approval workflow will be triggered.</description>
        <label>Cost Center Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EUR_CRM_Cost_Center_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>A&amp;P</fullName>
                </value>
                <value>
                    <fullName>BR11</fullName>
                </value>
                <value>
                    <fullName>BR12A</fullName>
                </value>
                <value>
                    <fullName>BR12B</fullName>
                </value>
                <value>
                    <fullName>BR12C</fullName>
                </value>
                <value>
                    <fullName>BR12D</fullName>
                </value>
                <value>
                    <fullName>BR14A</fullName>
                </value>
                <value>
                    <fullName>BR14D</fullName>
                </value>
                <value>
                    <fullName>BR15</fullName>
                </value>
                <value>
                    <fullName>BR16</fullName>
                </value>
                <value>
                    <fullName>BR1A</fullName>
                </value>
                <value>
                    <fullName>BR1B</fullName>
                </value>
                <value>
                    <fullName>BR2A</fullName>
                </value>
                <value>
                    <fullName>BR2B</fullName>
                </value>
                <value>
                    <fullName>BR3A</fullName>
                </value>
                <value>
                    <fullName>BR3B</fullName>
                </value>
                <value>
                    <fullName>BR3C</fullName>
                </value>
                <value>
                    <fullName>BR3E</fullName>
                </value>
                <value>
                    <fullName>BR5</fullName>
                </value>
                <value>
                    <fullName>BR6A</fullName>
                </value>
                <value>
                    <fullName>BR6B</fullName>
                </value>
                <value>
                    <fullName>BR7</fullName>
                </value>
                <value>
                    <fullName>BR8A</fullName>
                </value>
                <value>
                    <fullName>BR9</fullName>
                </value>
                <value>
                    <fullName>CA1A</fullName>
                </value>
                <value>
                    <fullName>CA1B</fullName>
                </value>
                <value>
                    <fullName>CA1C</fullName>
                </value>
                <value>
                    <fullName>CA1D</fullName>
                </value>
                <value>
                    <fullName>CA1E</fullName>
                </value>
                <value>
                    <fullName>CA1F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Cost_Center_Type__c</fullName>
        <label>Cost Center Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A&amp;P</fullName>
                </value>
                <value>
                    <fullName>A&amp;D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <formula>IF( EUR_CRM_Account__r.RecordType.DeveloperName=&apos;EUR_Account_for_Stock&apos;, EUR_CRM_Account__r.EUR_CRM_Country__c, EUR_CRM_Account__r.EUR_CRM_Country_Code__c)</formula>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country__c</fullName>
        <formula>EUR_CRM_Account__r.EUR_CRM_Country_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_CreatedBySapNumber__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Sap Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Created_By_Name__c</fullName>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <label>Created By (Name)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Created_By_Role__c</fullName>
        <description>This is a field to displayed the Sales Order&apos;s Creator&apos;s Role</description>
        <formula>CreatedBy.UserRole.Name</formula>
        <label>Created By (Role)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_CreditStatus__c</fullName>
        <label>Credit status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_CustomerOrderNumber__c</fullName>
        <label>Customer Order Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_CustomerPurchaseOrder__c</fullName>
        <label>Customer Purchase Order</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_CustomerSAPID__c</fullName>
        <formula>EUR_CRM_Account__r.EUR_CRM_Customer_No_ERP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Sold-to party</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Customer_Name__c</fullName>
        <formula>EUR_CRM_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Customer_No_ERP__c</fullName>
        <formula>EUR_CRM_Account__r.EUR_CRM_Customer_No_ERP__c</formula>
        <label>Customer No. (ERP)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Customer_Nr_Salesforce__c</fullName>
        <formula>EUR_CRM_Account__r.EUR_CRM_Customer_No__c</formula>
        <label>Customer Nr. (Salesforce)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Customer_Ship_To_No_ERP__c</fullName>
        <formula>EUR_CRM_Account__r.EUR_CRM_Customer_Ship_To_No_ERP__c</formula>
        <label>Customer Ship To No. (ERP)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Customer_code_in_wholesaler_ERP__c</fullName>
        <formula>EUR_CRM_Supplier__r.EUR_CRM_Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer code in wholesaler ERP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Date__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_DeliveryBlockReason__c</fullName>
        <label>DeliveryBlockReason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_DeliveryInstruction__c</fullName>
        <label>Delivery Instruction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_DeliveryStatus__c</fullName>
        <label>DeliveryStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Delivery_City__c</fullName>
        <label>Delivery City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Delivery_Contact__c</fullName>
        <label>Delivery Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Delivery_Method__c</fullName>
        <description>This is a new field created for PR BG.</description>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PR Warehouse</fullName>
                </value>
                <value>
                    <fullName>WHS Warehouse</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Delivery_Postal_Code__c</fullName>
        <label>Delivery Postal Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Delivery_Street__c</fullName>
        <label>Delivery Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Delivery_Time_Range__c</fullName>
        <description>PT is the first country to use this field.</description>
        <label>Delivery Time Range</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>8am to 10am</fullName>
                </value>
                <value>
                    <fullName>10am to 12pm</fullName>
                </value>
                <value>
                    <fullName>12pm to 2pm</fullName>
                </value>
                <value>
                    <fullName>2pm to 4pm</fullName>
                </value>
                <value>
                    <fullName>4pm to 6pm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Distinct_del__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distinct order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Distributionchannel__c</fullName>
        <formula>EUR_CRM_Account__r.EUR_CRM_DistrChannel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Distributor_Email__c</fullName>
        <label>Distributor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>Sales Orders (EU) (Distributor)</relationshipLabel>
        <relationshipName>Sales_Orders_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Division__c</fullName>
        <formula>EUR_CRM_Account__r.EUR_CRM_Division__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Email__c</fullName>
        <description>This field has been created first to answer the DK requirement to be able to send a direct sales order email notification to any email address</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Endpoint_Response_Message__c</fullName>
        <label>Endpoint Response Message</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Endpoint_Sync_Status__c</fullName>
        <label>Endpoint Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_EventId__c</fullName>
        <label>EventId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_ExternalSAPId__c</fullName>
        <externalId>true</externalId>
        <label>External SAP Id</label>
        <length>13</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Has_Discounted_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Discounted Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Has_POSM_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has POSM Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Indirect_Order_Type__c</fullName>
        <label>Indirect Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Trade</fullName>
                </value>
                <value>
                    <fullName>Off Trade</fullName>
                </value>
                <value>
                    <fullName>Invoiced by Wholesaler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_InitialOrderNumber__c</fullName>
        <formula>EUR_CRM_InitialOrder__r.EUR_CRM_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_InitialOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for SAP SalesOrders. Link to initial SalesOrders, after splitting which this one appears.</description>
        <label>Sales Order (EU)</label>
        <referenceTo>EUR_CRM_Sales_Order__c</referenceTo>
        <relationshipLabel>Sales Orders (EU)</relationshipLabel>
        <relationshipName>Sales_Orders_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_IntegrationSessionId__c</fullName>
        <label>Integration Session Id</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_IntegrationStatus__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Internal_Order_Nr_Customer__c</fullName>
        <label>Internal Order Nr. Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_InvoiceNumber__c</fullName>
        <label>InvoiceNumber</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Invoice_No__c</fullName>
        <label>Invoice No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Invoicing_Method__c</fullName>
        <description>This is a new field created for PR BG.</description>
        <label>Invoicing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Super discount</fullName>
                </value>
                <value>
                    <fullName>Counter-invoice</fullName>
                </value>
                <value>
                    <fullName>Protocol</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_IsDealMultiple__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deal Multiple</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_IsDealPG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deal PG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_IsExcise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Excise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_IsMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsMobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_IsSendOrderConfirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Order Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_KD_CS_Email__c</fullName>
        <label>KD CS Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Key_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Orders_EU1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Key_Distributor_Sales_Rep_Email__c</fullName>
        <label>Key Distributor Sales Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Key_Distributor_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Distributor Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Orders_User_Key_Distributor_SR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Orders_User_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_MessageforCustomerService__c</fullName>
        <label>Message for Customer Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_MobileCreatedDate__c</fullName>
        <label>Mobile Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Mobile_ID__c</fullName>
        <description>technical field represents Mobile ID from Convivio. Use for checking for data duplication</description>
        <label>Mobile ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_N_of_DI_roll__c</fullName>
        <label>Number of Delivery items</label>
        <summaryForeignKey>EUR_CRM_DeliveryItem__c.EUR_CRM_OrderID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_No_of_Order_Items_Match_Header__c</fullName>
        <formula>IF(EUR_CRM_No_of_Sales_Order_Items__c =  EUR_CRM_Total_Sales_Order_Item__c, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Order Items Match Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_No_of_Sales_Order_Items__c</fullName>
        <description>Field that mobile app needs to populate - contains the total number of Sales Order Item records to be synced to SFDC - Webservice will query the Sales Order Item table until the number of records in SFDC is equal to the value of this field, before executing the Web Service Call Out</description>
        <label>No. of Sales Order Items</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_NumberOfLines__c</fullName>
        <label>NumberOfLines</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Numberofboxes__c</fullName>
        <label>Number of boxes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_OnHoldReason__c</fullName>
        <label>On Hold reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_OrderDate_JDE__c</fullName>
        <label>Order Date JDE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_OrderType__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Order_Nr_JDE__c</fullName>
        <label>Order Nr. JDE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>